# thordata-cookbook

./: .env  .gitignore  README.md  knowledge_base_sample.md  pyproject.toml  rag_data_pipeline.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: knowledge_base_sample.md  rag_openai_research.ipynb
notebooks/ai/: web_qa_agent_with_thordata.ipynb
notebooks/devtools/: github_repo_intel.ipynb  github_repo_intel_demo.csv
notebooks/rag/: rag_openai_research.ipynb
scripts/: mcp_server.py  rag_data_pipeline.py  test_mcp_tools.py
tests/: test_scripts_compile.py  test_scripts_help.py
